[package]
name = "test-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.6.2", features = ["attributes"] }
async-trait = "0.1"
futures = "0.3.1"
libp2p = { path = "../rust-libp2p", features=["async-std", "gossipsub", "macros", "mdns", "noise", "tcp", "yamux"] }
solana-sdk = { version = "1.15.0", path = "../solana/sdk" }
