[package]
name = "test-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.6.2", features = ["attributes"] }
async-trait = "0.1"
clap = { version = "4.1.4", features = ["derive"] }
crossbeam-channel = "0.5"
futures = "0.3.1"
futures-lite = "1.12.0"
log = "0.4.17"
rand = "0.7.0"
simplelog = "0.12.0"

libp2p = { path = "../rust-libp2p", features=["async-std", "gossipsub", "identify", "macros", "noise", "ping", "tcp", "yamux"] }
solana-client = { version = "1.15.0", path = "../solana/client" }
solana-core = { version = "1.15.0", path = "../solana/core" }
solana-logger = { version = "1.15.0", path = "../solana/logger" }
solana-metrics = { version = "1.15.0", path = "../solana/metrics" }
solana-perf = { version = "1.15.0", path = "../solana/perf" }
solana-sdk = { version = "1.15.0", path = "../solana/sdk" }
solana-streamer = { version = "1.15.0", path = "../solana/streamer" }
